12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -1,7 +1,7 @@
 l_english:
  STATE_1:0 "코르시카"
  STATE_2:0 "라티움"
- STATE_3:0 "스위스"
+ STATE_3:0 "미텔란트"
  STATE_4:0 "남부 오스트리아"
  STATE_5:0 "동프로이센"
  STATE_6:0 "플랑드르"
@@ -26,8 +26,8 @@ l_english:
  STATE_25:0 "리무쟁"
  STATE_26:0 "오베르뉴"
  STATE_27:0 "부르고뉴"
- STATE_28:0 "엘자스"
- STATE_29:0 "파드칼레"
+ STATE_28:0 "엘자스-로트링겐"
+ STATE_29:0 "릴"
  STATE_30:0 "루아르"
  STATE_31:0 "미디-피레네"
  STATE_32:0 "알프스"
@@ -56,7 +56,7 @@ l_english:
  STATE_55:0 "헤센"
  STATE_56:0 "베저-엠스"
  STATE_57:0 "베스트팔렌"
- STATE_58:0 "슐레스비히홀슈타인"
+ STATE_58:0 "홀슈타인"
  STATE_59:0 "하노버"
  STATE_60:0 "튀링겐"
  STATE_61:0 "메클렌부르크"
@@ -66,17 +66,17 @@ l_english:
  STATE_65:0 "작센"
  STATE_66:0 "니더실레시아"
  STATE_67:0 "상부 슐레지엔"
- STATE_68:0 "오스트마르크"
+ STATE_68:0 "노이마르크"
  STATE_69:0 "독일령 보헤미아"
- STATE_70:0 "세프스"
- STATE_71:0 "니트라"
+ STATE_70:0 "니트라"
+ STATE_71:0 "세프스"
  STATE_72:1 "북부 샨"
  STATE_73:0 "마라무레슈"
  STATE_74:0 "독일령 모라비아"
  STATE_75:0 "모라비아"
  STATE_76:0 "북부 트란실바니아"
- STATE_77:0 "도브루자"
- STATE_78:0 "베사라비아"
+ STATE_77:0 "실리스트라"
+ STATE_78:0 "바사라비아"
  STATE_79:0 "몰도바"
  STATE_80:0 "부코비나"
  STATE_81:0 "올테니아"
@@ -136,7 +136,7 @@ l_english:
  STATE_135:0 "먼스터"
  STATE_136:0 "애버딘셔"
  STATE_137:0 "크림 반도"
- STATE_138:0 "스코네"
+ STATE_138:0 "스코넬란드"
  STATE_139:0 "스몰란드"
  STATE_140:0 "베스테르예틀란드"
  STATE_141:0 "스베알란드"
@@ -149,7 +149,7 @@ l_english:
  STATE_148:0 "라피"
  STATE_149:0 "포흐얀마"
  STATE_150:0 "카이누"
- STATE_151:0 "동부 스위스"
+ STATE_151:0 "오스트스위스"
  STATE_152:0 "북 오스트리아"
  STATE_153:0 "티롤"
  STATE_154:0 "아폴드"
@@ -213,8 +213,8 @@ l_english:
  STATE_212:0 "플로브디프"
  STATE_213:0 "무르만스크"
  STATE_214:0 "아르한겔스크"
- STATE_215:0 "오네가"
- STATE_216:0 "올로네츠"
+ STATE_215:0 "벨로모스크"
+ STATE_216:0 "페트로자보츠크"
  STATE_217:0 "차리친"
  STATE_218:0 "로스토프-나-도누"
  STATE_219:0 "모스크바"
@@ -228,12 +228,12 @@ l_english:
  STATE_227:0 "유지프"
  STATE_228:0 "루간스크"
  STATE_229:0 "아제르바이잔"
- STATE_230:0 "아르메니아"
- STATE_231:0 "조지아"
+ STATE_230:0 "하야스탄"
+ STATE_231:0 "사카르트벨로"
  STATE_232:0 "그로즈니"
- STATE_233:0 "코카서스 산맥"
+ STATE_233:0 "블라디카프카즈"
  STATE_234:0 "츠믈리얀스카야"
- STATE_235:0 "스트라브로폴"
+ STATE_235:0 "스트브로폴"
  STATE_236:0 "아스트라한"
  STATE_237:0 "옐리스타"
  STATE_238:0 "볼고돈스크"
@@ -269,7 +269,7 @@ l_english:
  STATE_268:0 "지부티"
  STATE_269:0 "하르게이사"
  STATE_270:0 "핏케언 제도"
- STATE_271:0 "에티오피아"
+ STATE_271:0 "아디스아바바"
  STATE_272:0 "세네갈"
  STATE_273:0 "리비아 사막"
  STATE_274:0 "황금 해안"
@@ -296,7 +296,7 @@ l_english:
  STATE_295:0 "프리드리히슈타트"
  STATE_296:0 "포르투갈령 기니"
  STATE_297:0 "적도 기니"
- STATE_298:0 "라이베리아"
+ STATE_298:0 "후추 해안"
  STATE_299:0 "이슬라스 말비나스"
  STATE_300:0 "우루과이"
  STATE_301:0 "파라과이"
@@ -355,7 +355,7 @@ l_english:
  STATE_354:0 "트라브존"
  STATE_355:0 "삼순"
  STATE_356:0 "카스타모누"
- STATE_357:0 "뉴잉글랜드"
+ STATE_357:0 "메인"
  STATE_358:0 "뉴욕시"
  STATE_359:0 "뉴저지"
  STATE_360:0 "펜실베이니아"
@@ -455,8 +455,8 @@ l_english:
  STATE_454:0 "팔렌스타인"
  STATE_455:0 "요르단"
  STATE_456:0 "아스완"
- STATE_457:0 "아라비아 사막"
- STATE_458:0 "튀니지"
+ STATE_457:0 "동부 사막"
+ STATE_458:0 "튀니스"
  STATE_459:0 "알제"
  STATE_460:0 "콘스탄틴"
  STATE_461:0 "카사블랑카"
@@ -486,7 +486,7 @@ l_english:
  STATE_485:0 "게레로"
  STATE_486:0 "메타"
  STATE_487:0 "산타 쿠루스"
- STATE_488:0 "기아나"
+ STATE_488:0 "기아나 고지"
  STATE_489:0 "술리아"
  STATE_490:0 "파스타사"
  STATE_491:0 "로레토"
@@ -511,15 +511,15 @@ l_english:
  STATE_510:0 "엔트레리오스"
  STATE_511:0 "멘도사"
  STATE_512:0 "파타고니아"
- STATE_513:0 "사하라"
- STATE_514:0 "알제리사막"
+ STATE_513:0 "남부 지역"
+ STATE_514:0 "사하라"
  STATE_515:0 "차드"
- STATE_516:0 "북서시베리아"
+ STATE_516:0 "타이미르"
  STATE_517:0 "빅토리아"
  STATE_518:0 "태즈메이니아"
- STATE_519:0 "남호주"
+ STATE_519:0 "사우스오스트레일리아"
  STATE_520:0 "노던 준주"
- STATE_521:0 "퀸즈랜드"
+ STATE_521:0 "남부 퀸즐랜드"
  STATE_522:0 "호주 서부"
  STATE_523:0 "파푸아"
  STATE_524:0 "타이호쿠"
@@ -536,13 +536,13 @@ l_english:
  STATE_535:0 "고신에쓰"
  STATE_536:0 "홋카이도"
  STATE_537:0 "카라푸토"
- STATE_538:0 "중부 콩고"
- STATE_539:0 "서아프리카"
+ STATE_538:0 "에콰도르콩고"
+ STATE_539:0 "가봉"
  STATE_540:0 "앙골라"
  STATE_541:0 "남서아프리카"
  STATE_542:0 "베추아날랜드"
  STATE_543:0 "마다가스카르"
- STATE_544:0 "모잠비크"
+ STATE_544:0 "잠베지아"
  STATE_545:0 "로디지아"
  STATE_546:0 "탕가니카"
  STATE_547:0 "케냐"
@@ -579,7 +579,7 @@ l_english:
  STATE_578:0 "톰스크"
  STATE_579:0 "오브도르스크"
  STATE_580:0 "토볼스크"
- STATE_581:0 "북부 우랄"
+ STATE_581:0 "세베르니 우랄"
  STATE_582:0 "벨로레츠크"
  STATE_583:0 "쿠스타나이"
  STATE_584:0 "카라쿰 사막"
@@ -587,7 +587,7 @@ l_english:
  STATE_586:0 "비슈케크"
  STATE_587:0 "포트 알렉산드로비치"
  STATE_588:0 "파블로다르"
- STATE_589:0 "알마-아타"
+ STATE_589:0 "베르니"
  STATE_590:0 "아크몰린스크"
  STATE_591:0 "치옹야"
  STATE_592:0 "광저우"
@@ -633,19 +633,19 @@ l_english:
  STATE_632:0 "웨이크 섬"
  STATE_633:0 "마셜 제도"
  STATE_634:0 "솔로몬 제도"
- STATE_635:0 "뉴칼레도니아"
+ STATE_635:0 "노이엘자스"
  STATE_636:0 "피지"
  STATE_637:0 "캄차카"
  STATE_638:0 "괌"
- STATE_639:0 "길버트 제도"
+ STATE_639:0 "크루젠슈테른 제도"
  STATE_640:0 "만달레이"
- STATE_641:0 "타히티"
+ STATE_641:0 "독일령 폴리네시아 제도"
  STATE_642:0 "피닉스 섬"
- STATE_643:0 "엘리스 제도"
+ STATE_643:0 "한스만 제도"
  STATE_644:0 "북동시베리아"
  STATE_645:0 "이오지마"
- STATE_646:0 "사이판"
- STATE_647:0 "팔라우"
+ STATE_646:0 "마리아나 제도"
+ STATE_647:0 "팔라우 섬"
  STATE_648:0 "미나미토리 섬"
  STATE_649:0 "갈라파고스 제도"
  STATE_650:0 "애투 섬"
@@ -679,7 +679,7 @@ l_english:
  STATE_678:0 "루브 알하리 사막"
  STATE_679:0 "헤자즈"
  STATE_680:0 "데이르에조르"
- STATE_681:0 "케이프"
+ STATE_681:0 "서부 케이프"
  STATE_682:0 "북부 온타리오"
  STATE_683:0 "북부 퀘벡"
  STATE_684:0 "캐롤라인 제도"
@@ -701,17 +701,17 @@ l_english:
  STATE_700:0 "시에라리온"
  STATE_701:1 "카친"
  STATE_702:0 "카보베르데"
- STATE_703:0 "어센션 섬"
- STATE_704:0 "세인트헬레나"
+ STATE_703:0 "히멜파르츠 섬"
+ STATE_704:0 "장크트헬레나"
  STATE_705:0 "상투메"
- STATE_706:0 "레위니옹"
+ STATE_706:0 "호엔촐레른가 제도"
  STATE_707:0 "모리셔스"
- STATE_708:0 "코모로스 제도"
- STATE_709:0 "세이셸 제도"
- STATE_710:0 "디에고가르시아"
- STATE_711:0 "크리스마스 섬"
- STATE_712:0 "코코스 제도"
- STATE_713:0 "케르겔렌 섬"
+ STATE_708:0 "코모로"
+ STATE_709:0 "쿤 군도"
+ STATE_710:0 "차고스아르치펠"
+ STATE_711:0 "베흐나친즐"
+ STATE_712:0 "칼뮐러 제도"
+ STATE_713:0 "나이팅게일 섬"
  STATE_714:0 "넌장"
  STATE_715:0 "랴오베이"
  STATE_716:0 "봉천"
@@ -723,193 +723,262 @@ l_english:
  STATE_722:0 "페트사모"
  STATE_723:0 "남섬"
  STATE_724:0 "크라 지협"
- STATE_725:0 "나우루"
+ STATE_725:0 "나보도"
  STATE_726:0 "사모아"
  STATE_727:0 "라인 제도"
  STATE_728:0 "광저우만"
  STATE_729:0 "마카오"
  STATE_730:0 "생피에르에 미클롱 섬"
- STATE_731:0 "살로니키"
- STATE_732:0 "파미르 고원"
- STATE_733:0 "안다만"
- STATE_734:0 "넨도"
- STATE_735:0 "사보이"
+ STATE_731:0 "유즈나 마케도니아"
+ STATE_732:0 "페르가나"
+ STATE_733:0 "안다만 제도"
+ STATE_734:0 "티레니어스 제도"
+ STATE_735:0 "사보이아"
  STATE_736:0 "퀴스트란트"
- STATE_737:0 "비즈마크"
+ STATE_737:0 "비스마르크 군도"
  STATE_738:0 "아루 제도"
  STATE_739:0 "하이다과이"
  STATE_740:0 "밴쿠버 섬"
  STATE_741:0 "독일령 왈로니아"
  STATE_742:0 "아브루초"
  STATE_743:0 "상하이"
-STATE_744:0 "칭다오"
-STATE_745:0 "다롄"
-STATE_746:0 "닝보"
-STATE_747:0 "푸저우"
-STATE_748:0 "서 시캉"
-STATE_749:0 "타나오스리"
-STATE_750:1 "프놈펜"
-STATE_751:0 "시라트말레이"
-STATE_752:0 "하이드라마우"
-STATE_753:0 "수에즈카날"
-STATE_754:0 "메디나"
-STATE_755:0 "벨리키예루키"
-STATE_756:1 "남부 샨"
-STATE_757:0 "북 뉴기니"
-STATE_758:0 ""
-STATE_759:0 "프리울리"
-STATE_760:0 "로망디"
-STATE_761:0 "티치노"
-STATE_762:0 "니스"
-STATE_763:0 "코티 알프스"
-STATE_764:0 "안지오"
-STATE_765:0 "코소보"
-STATE_766:0 "블로러"
-STATE_767:0 "니시"
-STATE_768:0 "테살리아"
-STATE_769:0 "카발라"
-STATE_770:0 "플로븐"
-STATE_771:0 "바르나"
-STATE_772:0 "도브루자"
-STATE_773:0 "콘스탄티니예"
-STATE_774:0 "이즈미트"
-STATE_775:0 "슈타이어마르크"
-STATE_776:0 "서프로이센"
-STATE_777:0 "카토비체"
-STATE_778:0 "외펜-말메디"
-STATE_779:0 "난치히"
-STATE_780:0 "자를란트"
-STATE_781:0 "웨스트라인란트"
-STATE_782:0 "북부 슐레스비히"
-STATE_783:0 "트렌티노"
-STATE_784:0 "부르겐란트"
-STATE_785:0 "동부 샹파뉴"
-STATE_786:0 "독일령 모라비아"
-STATE_787:0 "키즐랴르"
-STATE_788:0 "남부 간쑤"
-STATE_789:1 "셰클러랜드"
-STATE_790:1 "라킨"
-STATE_791:0 "모힐리우포딜스키"
-STATE_792:0 "리우네"
-STATE_793:1 "아스투리아스"
-STATE_794:0 "스리옘"
-STATE_795:0 "트리에스테"
-STATE_796:0 "북부 뉴욕"
-STATE_797:0 "샌 프란시스코"
-STATE_798:0 "로스 엔젤레스"
-STATE_799:0 "남부 산시"
-STATE_800:0 "루펑"
-STATE_801:0 "산터우"
-STATE_802:0 "샤면"
-STATE_803:0 "왱저우"
-STATE_804:0 "반다르아바스"
-STATE_805:0 "틀렘센"
-STATE_806:0 "기니"
-STATE_807:0 "이보리 해안"
-STATE_808:0 "북부 볼타"
-STATE_809:0 "니제르"
-STATE_810:0 "우스카메노고르스크"
-STATE_811:0 "미누신스크"
-STATE_812:0 "시라아 사막"
-STATE_813:0 "보르베크랜드"
-STATE_814:0 "우라타라칸드"
-STATE_815:0 "고라크푸르"
-STATE_816:0 "동 구이저우"
-STATE_817:0 "론"
-STATE_818:0 "관타나모 만"
-STATE_819:0 "키르쿠크"
-STATE_820:0 "산티아고 쿠바"
-STATE_821:0 "파블로흐라드"
-STATE_822:0 "란나"
-STATE_823:0 "이산"
-STATE_824:0 "라용"
-STATE_825:0 "프라타봉"
-STATE_826:0 "스퉁트렝"
-STATE_827:0 "안남"
-STATE_828:0 "사바"
-STATE_829:0 "남부 캘리포니아"
-STATE_830:0 "파타니"
-STATE_831:0 "사툰"
-STATE_832:0 "트란스페코스"
-STATE_833:0 "남부 텍사스"
-STATE_834:0 "투스콘"
-STATE_835:0 "케르텐"
-STATE_836:0 "잘츠부르크"
-STATE_837:1 "풀리아"
-STATE_838:0 "리구리아"
-STATE_839:0 "바사"
-STATE_840:0 "우시마"
-STATE_841:0 "피로트"
-STATE_842:0 "테구시갈파"
-STATE_843:0 "리아우 섬"
-STATE_844:0 "트론헤임"
-STATE_845:0 "카하마르카"
-STATE_846:0 "말레이시아"
-STATE_847:0 "베니"
-STATE_848:0 "포토시"
-STATE_849:0 "카라카스"
-STATE_850:0 "수크레"
-STATE_851:0 "카퀘타"
-STATE_852:0 "카우카"
-STATE_853:0 "초코"
-STATE_854:0 "데이비드"
-STATE_855:0 "아크레"
-STATE_856:0 "메콩델타"
-STATE_857:0 "동박"
-STATE_858:0 "타왕"
-STATE_859:0 "타카오"
-STATE_860:0 "말리 사막"
-STATE_861:0 "베르베라"
-STATE_862:0 "수단 사막"
-STATE_863:0 "남서수오미"
-STATE_864:0 "사보"
-STATE_865:0 "웨스트카렐리야"
-STATE_866:0 "동 네덜란드"
-STATE_867:0 "트리반코어"
-STATE_868:0 "콜하푸르"
-STATE_869:0 "르완다"
-STATE_870:0 "부룬디"
-STATE_871:0 "니아살랜드"
-STATE_872:0 "아리카"
-STATE_873:0 "타라파카"
-STATE_874:0 "아타카마"
-STATE_875:0 "웨스트바나"
-STATE_876:0 "다호메"
-STATE_877:0 "토고랜드"
-STATE_878:0 "하우살란드"
-STATE_879:0 "카탕가"
-STATE_880:0 "드빈스크"
-STATE_881:0 "젠트랄콩고"
-STATE_882:0 "케냐부리"
-STATE_883:0 "헤이룽장"
-STATE_884:0 "싱안"
-STATE_885:0 "송장"
-STATE_886:0 "지린"
-STATE_887:0 "무자파르푸르"
-STATE_888:0 "시킴"
-STATE_889:0 "비사카파트남"
-STATE_890:0 "심라"
-STATE_891:0 "라호르"
-STATE_892:0 "주바랜드"
-STATE_893:0 "나그푸르"
-STATE_894:0 "산타카타리나"
-STATE_895:0 "이스피리투산투"
-STATE_896:0 "마라냥"
-STATE_897:0 "아마파"
-STATE_898:0 "파라"
-STATE_899:0 "로라이마"
-STATE_900:0 "론도니아"
-STATE_901:0 "차코아우스트랄"
-STATE_902:0 "코르도바"
-STATE_903:0 "후후이"
-STATE_904:0 "라리오하"
-STATE_905:0 "잔지바르"
-STATE_906:0 "오가덴"
-STATE_907:0 "바레인"
-STATE_908:0 "보후슬렌"
-STATE_909:0 "토르네달렌"
-STATE_910:0 "니제르 사막"
-STATE_911:0 "다푸르"
-STATE_912:0 "델다델오리노코"
-STATE_913:0 "보르누"
-STATE_914:0 "카빈다"
+ STATE_744:0 "칭다우"
+ STATE_745:0 "다롄"
+ STATE_746:0 "닝보"
+ STATE_747:0 "푸저우"
+ STATE_748:0 "서 시캉"
+ STATE_749:0 "타나오스리"
+ STATE_750:1 "프놈펜"
+ STATE_751:0 "시라트말레이"
+ STATE_752:0 "하이드라마우"
+ STATE_753:0 "수에즈카날"
+ STATE_754:0 "메디나"
+ STATE_755:0 "토로페츠"
+ STATE_756:1 "하부 샨"
+ STATE_757:0 "카이저빌헬름란트"
+ STATE_758:0 "이오니아 제도"
+ STATE_759:0 "프리울리"
+ STATE_760:0 "로망디"
+ STATE_761:0 "티치노"
+ STATE_762:0 "니스"
+ STATE_763:0 "코티 알프스"
+ STATE_764:0 "안지오"
+ STATE_765:0 "코소보"
+ STATE_766:0 "지로카스터르"
+ STATE_767:0 "니시"
+ STATE_768:0 "테살리아"
+ STATE_769:0 "카발라"
+ STATE_770:0 "플로븐"
+ STATE_771:0 "바르나"
+ STATE_772:0 "도브루자"
+ STATE_773:0 "콘스탄티니예"
+ STATE_774:0 "이즈미트"
+ STATE_775:0 "슈타이어마르크"
+ STATE_776:0 "서프로이센"
+ STATE_777:0 "카토비체"
+ STATE_778:0 "옘틀란드"
+ STATE_779:0 "난치히"
+ STATE_780:0 "자를란트"
+ STATE_781:0 "웨스트라인란트"
+ STATE_782:0 "북부 슐레스비히"
+ STATE_783:0 "트렌티노"
+ STATE_784:0 "부르겐란트"
+ STATE_785:0 "동부 샹파뉴"
+ STATE_786:0 "독일령 모라비아"
+ STATE_787:0 "키즐랴르"
+ STATE_788:0 "남부 간쑤"
+ STATE_789:1 "셰클러랜드"
+ STATE_790:1 "라킨"
+ STATE_791:0 "모힐리우포딜스키"
+ STATE_792:0 "리우네"
+ STATE_793:1 "아스투리아스"
+ STATE_794:0 "스리옘"
+ STATE_795:0 "트리에스테"
+ STATE_796:0 "북부 뉴욕"
+ STATE_797:0 "샌 프란시스코"
+ STATE_798:0 "로스 엔젤레스"
+ STATE_799:0 "남부 산시"
+ STATE_800:0 "루펑"
+ STATE_801:0 "산터우"
+ STATE_802:0 "샤면"
+ STATE_803:0 "왱저우"
+ STATE_804:0 "반다르아바스"
+ STATE_805:0 "틀렘센"
+ STATE_806:0 "기니"
+ STATE_807:0 "엘픈바인쿠스트"
+ STATE_808:0 "하우테 볼타"
+ STATE_809:0 "니제르"
+ STATE_810:0 "우스카메노고르스크"
+ STATE_811:0 "미누신스크"
+ STATE_812:0 "시라아 사막"
+ STATE_813:0 "남 보르베크랜드"
+ STATE_814:0 "우라타라칸드"
+ STATE_815:0 "고라크푸르"
+ STATE_816:0 "동 구이저우"
+ STATE_817:0 "론"
+ STATE_818:0 "관타나모 만"
+ STATE_819:0 "키르쿠크"
+ STATE_820:0 "산티아고 쿠바"
+ STATE_821:0 "파블로흐라드"
+ STATE_822:0 "란나"
+ STATE_823:0 "이산"
+ STATE_824:0 "라용"
+ STATE_825:0 "프라타봉"
+ STATE_826:0 "스퉁트렝"
+ STATE_827:0 "안남"
+ STATE_828:0 "사바"
+ STATE_829:0 "남부 캘리포니아"
+ STATE_830:0 "파타니"
+ STATE_831:0 "모르라마"
+ STATE_832:0 "트란스페코스"
+ STATE_833:0 "남부 텍사스"
+ STATE_834:0 "투스콘"
+ STATE_835:0 "케르텐"
+ STATE_836:0 "잘츠부르크"
+ STATE_837:1 "풀리아"
+ STATE_838:0 "리구리아"
+ STATE_839:0 "슐레스비히"
+ STATE_840:0 "우시마"
+ STATE_841:0 "피로트"
+ STATE_842:0 "테구시갈파"
+ STATE_843:0 "리아우 섬" 
+ STATE_844:0 "트론헤임"
+ STATE_845:0 "카하마르카"
+ STATE_846:0 "말레이시아"
+ STATE_847:0 "베니"
+ STATE_848:0 "포토시"
+ STATE_849:0 "카라카스"
+ STATE_850:0 "수크레"
+ STATE_851:0 "카퀘타"
+ STATE_852:0 "카우카"
+ STATE_853:0 "초코"
+ STATE_854:0 "데이비드"
+ STATE_855:0 "아크레"
+ STATE_856:0 "메콩델타"
+ STATE_857:0 "동박"
+ STATE_858:0 "타왕"
+ STATE_859:0 "타카오"
+ STATE_860:0 "말리 사막"
+ STATE_861:0 "베르베라"
+ STATE_862:0 "수단 사막"
+ STATE_863:0 "남서수오미"
+ STATE_864:0 "사보"
+ STATE_865:0 "웨스트카렐리야"
+ STATE_866:0 "동 네덜란드"
+ STATE_867:0 "트리반코어"
+ STATE_868:0 "콜하푸르"
+ STATE_869:0 "르완다"
+ STATE_870:0 "부룬디"
+ STATE_871:0 "니아살랜드"
+ STATE_872:0 "아리카"
+ STATE_873:0 "타라파카"
+ STATE_874:0 "아타카마"
+ STATE_875:0 "웨스트바나"
+ STATE_876:0 "다호메"
+ STATE_877:0 "토고랜드"
+ STATE_878:0 "하우살란드"
+ STATE_879:0 "카탕가"
+ STATE_880:0 "드빈스크"
+ STATE_881:0 "젠트랄콩고"
+ STATE_882:0 "케냐부리"
+ STATE_883:0 "헤이룽장"
+ STATE_884:0 "싱안"
+ STATE_885:0 "송장"
+ STATE_886:0 "지린"
+ STATE_887:0 "무자파르푸르"
+ STATE_888:0 "시킴"
+ STATE_889:0 "비사카파트남"
+ STATE_890:0 "심라"
+ STATE_891:0 "라호르"
+ STATE_892:0 "주바랜드"
+ STATE_893:0 "나그푸르"
+ STATE_894:0 "산타카타리나"
+ STATE_895:0 "이스피리투산투"
+ STATE_896:0 "마라냥"
+ STATE_897:0 "아마파"
+ STATE_898:0 "파라"
+ STATE_899:0 "로라이마"
+ STATE_900:0 "론도니아"
+ STATE_901:0 "차코아우스트랄"
+ STATE_902:0 "코르도바"
+ STATE_903:0 "후후이"
+ STATE_904:0 "라리오하"
+ STATE_905:0 "잔지바르"
+ STATE_906:0 "오가덴"
+ STATE_907:0 "바레인"
+ STATE_908:0 "보후슬렌"
+ STATE_909:0 "토르네달렌"
+ STATE_910:0 "니제르 사막"
+ STATE_911:0 "다푸르"
+ STATE_912:0 "볼리바르"
+ STATE_913:0 "보르누"
+ STATE_914:0 "카빈다"
+ STATE_915:0 "하일"
+ STATE_916:0 "므반자 콩코"
+ STATE_917:0 "Lunda-Chokwe Ocidental"
+ STATE_918:0 "Kagera"
+ STATE_919:0 "Oromia"
+ STATE_920:0 "Amhara"
+ STATE_921:0 "Afar"
+ STATE_922:0 "오모"
+ STATE_923:0 "Tigray"
+ STATE_924:0 "Benishangul-Gumaz"
+ STATE_925:0 "Gallaland"
+ STATE_926:0 "Sermersuaq"
+ STATE_927:0 "카메룬"
+ STATE_928:0 "Kongo-Barthstadt"
+ STATE_929:0 "웨스트버지니아"
+ STATE_930:0 "델마바"
+ STATE_931:0 "코네티컷"
+ STATE_932:0 "메사추세츠"
+ STATE_933:0 "버몬트"
+ STATE_934:0 "뉴햄프셔"
+ STATE_935:0 "로드아일랜드"
+ STATE_936:0 "Varangerhalvøya"
+ STATE_937:0 "Finnmarksvidda"
+ STATE_938:0 "셰틀랜드"
+ STATE_939:0 "오크니"
+ STATE_940:0 "Olivenza"
+ STATE_941:0 "독일령 사모아"
+ STATE_942:0 "포어아를베르크"
+ STATE_943:0 "알타 사보이아"
+ STATE_944:0 "하라르"
+ STATE_945:0 "북부 케이프"
+ STATE_946:0 "동부 케이프"
+ STATE_947:0 "Oranje-Vrystaat"
+ STATE_948:0 "Ngoma"
+ STATE_949:0 "Bukavu"
+ STATE_950:0 "Inhambane-Gaza"
+ STATE_951:0 "Mavinga"
+ STATE_952:0 "Adamaua"
+ STATE_953:0 "Tekeland"
+ STATE_954:0 "Tete"
+ STATE_955:0 "동 보르벡슬란트"
+ STATE_956:0 "북 보르벡슬란트"
+ STATE_957:0 "서 보르벡슬란트"
+ STATE_958:0 "오스트바르셀로랜드"
+ STATE_959:0 "Lunda-Chokwe Oriental"
+ STATE_960:0 "Kiruna"
+ STATE_961:0 "Dankalia"
+ STATE_962:0 "Marua"
+ STATE_963:0 "Akanland"
+ STATE_964:0 "Amboland"
+ STATE_965:0 "다르에스살람"
+ STATE_966:0 "Hinterland"
+ STATE_967:0 "모리타니 사막"
+ STATE_968:0 "아드라르"
+ STATE_969:0 "Grabenbruch"
+ STATE_970:0 "몸바사"
+ STATE_971:0 "동 뉴카메룬"
+ STATE_972:0 "동남 뉴카메룬"
+ STATE_973:0 "남 뉴카메룬"
+ STATE_974:0 "Oubangui"
+ STATE_975:0 "독일령 차드"
+ STATE_976:0 "룰루스타드"
+ STATE_977:0 "키부"
+ STATE_978:0 "캔버라"
+ STATE_979:0 "북부 퀸즐랜드"
+ STATE_980:0 "킴벌리"
+ STATE_981:0 "필바라"
+ STATE_982:0 "살로니카"
+
