12월 업데이트/번역완료

--- a/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
@@ -1,43 +1,42 @@
-﻿l_english:
-
+l_english:
  STRATEGICREGION_1:0 "남부 잉글랜드"
  STRATEGICREGION_2:0 "북부 잉글랜드"
  STRATEGICREGION_3:1 "스코틀랜드"
  STRATEGICREGION_4:0 "아일랜드"
- STRATEGICREGION_5:0 "베네룩스 지역"
- STRATEGICREGION_6:0 "북-서독일"
- STRATEGICREGION_7:0 "서부 독일"
+ STRATEGICREGION_5:0 "베네룩스 지방"
+ STRATEGICREGION_6:0 "북서부 독일"
+ STRATEGICREGION_7:1 "남부 독일"
  STRATEGICREGION_8:0 "동부 독일"
  STRATEGICREGION_9:0 "발트 해"
  STRATEGICREGION_10:0 "남부 스웨덴"
  STRATEGICREGION_11:0 "남부 노르웨이"
  STRATEGICREGION_12:0 "북부 스칸디나비아"
  STRATEGICREGION_13:0 "핀란드"
- STRATEGICREGION_14:0 "트랜스-우랄"
+ STRATEGICREGION_14:0 "트랜스우랄"
  STRATEGICREGION_16:0 "북해"
- STRATEGICREGION_17:0 "동아프리카"
+ STRATEGICREGION_17_1:1 "아프리카의 뿔"
  STRATEGICREGION_18:0 "영국 해협"
  STRATEGICREGION_19:0 "북부 프랑스"
  STRATEGICREGION_20:0 "남부 프랑스"
  STRATEGICREGION_21:0 "알프스 지방"
- STRATEGICREGION_22:0 "체코슬로바키아"
+ STRATEGICREGION_22:1 "보헤미아"
  STRATEGICREGION_23:0 "이탈리아"
- STRATEGICREGION_24:0 "서부 발칸 반도"
+ STRATEGICREGION_24:0 "서부 발칸반도"
  STRATEGICREGION_25:0 "그리스"
- STRATEGICREGION_26:0 "동부 발칸 반도"
- STRATEGICREGION_27:0 "북부 발칸 반도"
+ STRATEGICREGION_26:0 "동부 발칸반도"
+ STRATEGICREGION_27:1 "헝가리"
  STRATEGICREGION_28:0 "중동"
- STRATEGICREGION_29:0 "중부 지중해"
+ STRATEGICREGION_29:0 "지중해"
  STRATEGICREGION_30:0 "흑해"
  STRATEGICREGION_31:0 "남부 인도"
  STRATEGICREGION_32:0 "남동부 태평양"
  STRATEGICREGION_33:0 "알래스카"
- STRATEGICREGION_34:0 "중앙 아메리카"
+ STRATEGICREGION_34:0 "중부 아메리카"
  STRATEGICREGION_35:0 "남아메리카"
  STRATEGICREGION_36:0 "그린란드"
- STRATEGICREGION_37:0 "발트 3국"
- STRATEGICREGION_38:0 "서부 폴란드"
- STRATEGICREGION_39:0 "동부 폴란드"
+ STRATEGICREGION_37:0 "발틱 국가"
+ STRATEGICREGION_38:1 "폴란드"
+ STRATEGICREGION_39:1 "벨라루스"
  STRATEGICREGION_40:1 "트란스볼가"
  STRATEGICREGION_41:1 "이베리아 반도"
  STRATEGICREGION_42:0 "비스케이 만"
@@ -49,7 +48,7 @@
  STRATEGICREGION_48:0 "아프리카 연안"
  STRATEGICREGION_49:0 "북대서양 해령"
  STRATEGICREGION_50:0 "래브라도 해"
- STRATEGICREGION_51:0 "대서양 중부 간극"
+ STRATEGICREGION_51:0 "래브라도 해"
  STRATEGICREGION_52:0 "멕시코만"
  STRATEGICREGION_53:0 "카리브해"
  STRATEGICREGION_54:0 "동부 연안"
@@ -71,7 +70,7 @@
  STRATEGICREGION_70:0 "카스피 해"
  STRATEGICREGION_71:0 "동인도양"
  STRATEGICREGION_72:0 "말라카 해협"
- STRATEGICREGION_73:0 "타이 만"
+ STRATEGICREGION_73:0 "시암 만"
  STRATEGICREGION_74:0 "동남인도양"
  STRATEGICREGION_75:0 "남중국해"
  STRATEGICREGION_76:0 "동중국해"
@@ -115,10 +114,10 @@
  STRATEGICREGION_114:0 "북태평양"
  STRATEGICREGION_115:0 "북동태평양"
  STRATEGICREGION_116:0 "이란"
- STRATEGICREGION_117:0 "동해안"
+ STRATEGICREGION_117:1 "남서"
  STRATEGICREGION_118:0 "서해안"
- STRATEGICREGION_119:0 "남서부"
- STRATEGICREGION_120:0 "중부 미국"
+ STRATEGICREGION_119:1 "남서"
+ STRATEGICREGION_120:2 "중서부"
  STRATEGICREGION_121:0 "동부 캐나다"
  STRATEGICREGION_122:0 "서부 캐나다"
  STRATEGICREGION_123:0 "멕시코"
@@ -129,7 +128,7 @@
  STRATEGICREGION_128:0 "이집트"
  STRATEGICREGION_129:0 "아나톨리아"
  STRATEGICREGION_130:0 "우크라이나"
- STRATEGICREGION_131:0 "벨라루스"
+ STRATEGICREGION_131_1:0 "서부 러시아"
  STRATEGICREGION_132:0 "북부 전선"
  STRATEGICREGION_133:0 "중앙 러시아"
  STRATEGICREGION_134:0 "코카서스 지방"
@@ -138,30 +137,30 @@
  STRATEGICREGION_137:0 "서부 초원"
  STRATEGICREGION_138:0 "우랄 지역"
  STRATEGICREGION_139:0 "남아프리카"
- STRATEGICREGION_140:0 "사하라 이남 아프리카"
+ STRATEGICREGION_140:1 "중앙 아프리카"
  STRATEGICREGION_141:0 "동부 인도"
- STRATEGICREGION_142:0 "동남아시아"
+ STRATEGICREGION_142:0 "시암"
  STRATEGICREGION_143:0 "북부 중국"
  STRATEGICREGION_144:0 "서부 중국"
- STRATEGICREGION_145:0 "중앙아시아"
+ STRATEGICREGION_145:0 "북서부 중국"
  STRATEGICREGION_146:0 "히말라야"
  STRATEGICREGION_147:0 "북부 시베리아"
- STRATEGICREGION_148:0 "러시아 극동 지역"
+ STRATEGICREGION_148:1 "아무르 지방"
  STRATEGICREGION_149:0 "동부 시베리아"
  STRATEGICREGION_150:0 "북극 러시아"
  STRATEGICREGION_151:0 "서부 시베리아"
- STRATEGICREGION_152:0 "중앙아시아 대초원"
+ STRATEGICREGION_152:0 "몽골"
  STRATEGICREGION_153:0 "북부 인도"
  STRATEGICREGION_154:0 "일본 열도"
  STRATEGICREGION_155:0 "만주"
- STRATEGICREGION_156:1 "호주 남부"
+ STRATEGICREGION_156:0 "오스트레일리아"
  STRATEGICREGION_157:0 "뉴질랜드"
  STRATEGICREGION_158:0 "순다 열도"
  STRATEGICREGION_159:0 "보르네오"
  STRATEGICREGION_160:0 "필리핀"
  STRATEGICREGION_161:0 "아이슬란드"
  STRATEGICREGION_162:0 "아프가니스탄"
- STRATEGICREGION_163:0 "아마존"
+ STRATEGICREGION_163:0 "아마조나스"
  STRATEGICREGION_164:0 "동부 중국"
  STRATEGICREGION_165:0 "남부 중국"
  STRATEGICREGION_166:0 "허드슨 만"
@@ -179,12 +178,19 @@
  STRATEGICREGION_178:0 "서 폴리네시아"
  STRATEGICREGION_179:0 "프랑스령 폴리네시아"
  STRATEGICREGION_180:0 "미크로네시아 간극"
-STRATEGICREGION_17_1:1 "아프리카의 뿔"
-STRATEGICREGION_131_1:0 "서부 러시아"
-STRATEGICREGION_181:0 "포강 유역"
-STRATEGICREGION_182:0 "서부 아프리카"
-STRATEGICREGION_183:0 "중부 캐나다"
-STRATEGICREGION_184:0 "캐나다 극지방"
-STRATEGICREGION_185:0 "북서"
-STRATEGICREGION_186:1 "북동"
-STRATEGICREGION_187:0 "아라비아"
+ STRATEGICREGION_181:0 "포강 유역"
+ STRATEGICREGION_182:0 "서부 캐나다"
+ STRATEGICREGION_183:0 "중부 캐나다"
+ STRATEGICREGION_184:0 "캐타나 극지방"
+ STRATEGICREGION_185:0 "북서"
+ STRATEGICREGION_186:1 "북-서"
+ STRATEGICREGION_187:0 "아라비아"
+ STRATEGICREGION_188:0 "동 아프리카"
+ STRATEGICREGION_189:0 "마그레브"
+ STRATEGICREGION_190:0 "중앙 아프리카"
+ STRATEGICREGION_191:0 "한국"
+ STRATEGICREGION_192:0 "수마트라"
+ STRATEGICREGION_193:1 "마다가스카르"
+ STRATEGICREGION_194:0 "말레이 반도"
+ STRATEGICREGION_195:0 "버마"
+ STRATEGICREGION_196:0 "인도차이나"
