12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Turkestan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Turkestan_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 trk_sharifian_struggle:0 "Sharifian Struggle"
@@ -83,13 +83,13 @@ turkestan.9.a:0 "This is merely the first step to rebuilding the Caliphate"
 turkestan.9.b:0 "We must now only promote where we rule"
 
 turkestan.10.t:0 "Delhi at war"
-turkestan.10.d:0 "Delhi, a former British colony, is engaged in a major war and may not be able to defend its interests in Asia!  This could be our chance to expand, if not into India then at least into Persia and Afghanistan!"
+turkestan.10.d:0 "Delhi, a former British colony, is engaged in a major war and may not be able to defend its interests in Asia! This could be our chance to expand, if not into India then at least into Persia and Afghanistan!"
 turkestan.10.a:0 "We shall march all the way to Tehran and Delhi!"
 turkestan.10.b:0 "Only move against Persia"
 turkestan.10.c:0 "The time is not yet right"
 
 turkestan.11.t:0 "Turkestan moves into Persia"
-turkestan.11.d:0 "We have always attempted to maintain stability on the frontiers of northern-west of India, but our forces are severely overstretched at the moment.  Can we risk a war against Turkestan as well?"
+turkestan.11.d:0 "We have always attempted to maintain stability on the frontiers of northern-west of India, but our forces are severely overstretched at the moment. Can we risk a war against Turkestan as well?"
 turkestan.11.a:0 "We shall protect them."
 turkestan.11.b:0 "We shall wait this out."
 turkestan.11.c:0 "We must occupy Persia before Turkestan."
