12월업데이트 수정

--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -1,21 +1,21 @@
 l_english:
 
 ### Ideas ###
-language_issue:0 "Issue of the Russian language"
+language_issue:0 "러시아어 문제"
 language_issue_desc:0 "The centuries-long Russian dominance of Ukraine and suppression of the Ukrainian language has produced a sizable Russian-speaking minority, or perhaps even majority, in Ukraine. With independence, the Ukrainian language has been reinvigorated, much to the chagrin of numerous Russo-Ukrainians, many of whom resist the Ukrainian government or even desire a return to Russian rule."
 Hetman_army:0 "Hetman's Army"
 Hetman_army_desc:0 "The Hetman of Ukraine, general Pavlo Skoropadsky, supported by Germany, undermined Austrian influence in Ukraine following the 1927 Austrian Ausgleich renegotiations. The political strife between the military, dominated by the Hetman, and the Ukrainian Rada, headed by the king, has left Ukraine's military in such disarray that even personal reconciliation between the Hetman and Rada would seem to be insufficient; the Ukrainian military is in dire need of reform."
 german_military_advisors:0 "German Military Advisers"
 german_military_advisors_desc:0 "-"
-UKR_black_monday:0 "Black Monday"
+UKR_black_monday:0 "검은 월요일"
 UKR_black_monday_desc:0 "Ukraine's dependence on Germany for agricultural exports left the nation acutely vulnerable to disruption following the Black Monday crisis. With a decreased German demand for Ukrainian exports and a marked reduction in German investment, the Ukrainian economy has stagnated."
-increase_taxes:0 "Increased Taxes"
+increase_taxes:0 "인상된 세금"
 increase_taxes_desc:0 "To stimulate economic growth, the Ukrainian government has signifigantly raised taxes to finance the construction of a modern electrical grid. Despite the burden of this taxation, unemployment has been substantially reduced and living conditions of Ukrainians previously without electricity are quickly improving."
 UKR_GER_recovery_aid:0 "Sending Aid to Ukraine"
 UKR_GER_recovery_aid_desc:0 "Germany has granted Ukraine a large loan to finance the construction of new Ukrainian infrastructure."
 UKR_recovery_aid:0 "German Aid"
 UKR_recovery_aid_desc:0 "Ukraine's request to Germany for a substantial loan to finance the construction of new electrical infrastructure has been granted. Unemployed Ukrainians now work to electrify even the poorest Ukrainian households."
-increase_taxes_2:0 "Increased Taxes"
+increase_taxes_2:0 "인상된 세금"
 increase_taxes_2_desc:0 "With the success of its electrification effort, the Ukrainian government has been emboldened to again raise taxes, now with the intent to modernise outdated factories left-over from its Russian-controlled past."
 UKR_GER_recovery_aid_2:0 "Sending Aid to Ukraine"
 UKR_GER_recovery_aid_2_desc:0 "Germany has granted Ukraine a second development loan, now with the intent to modernise Ukraine's many outdated factories."
