12월 업데이트 수정

--- a/Kaiserreich Korean Translation/localisation/KR_Venezuela_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Venezuela_l_english.yml
@@ -57,7 +57,7 @@ VEN_inf_desc:0 "If we are to take Venezuela to the future, we will need to ensur
 VEN_milinf:0 "Airport Construction Effort"
 VEN_milinf:0 "Expanding airports not only could mean both visitors and business personnel can travel better, but that our Airforce will have greater room to act, if the day ever comes"
 VEN_inf2:0 "Infrastructure Renewal"
-VEN_inf2_desc:0 "While much has been done, we must do more for 
+VEN_inf2_desc:0 "While much has been done, we must do more for"
 VEN_longtermplanning:0 "Long Term Economic Planning"
 VEN_longtermplanning_desc:0 "For too many years we have based our decisions and investments in short term goals. If we are, as a nation, to ever evolve, we must think about something greater than ourselves"
 VEN_healthyeco:0 "Economic Recovery"
@@ -71,7 +71,7 @@ VEN_industrialization_desc:0 "While it's still small, the process of industriali
 VEN_blackmonday:0 "Black Monday hits the Oil Wells"
 VEN_blackmonday_desc:0 "Dios Mio!"
 VEN_diversification1:0 "Weapons Industry"
-VEN_diversification1_desc:0 "If we are to truly beat an economic crisis of this magnitude, we must create a demand: A demand for arms.  Large and small manufacturers will flock to our offers.
+VEN_diversification1_desc:0 "If we are to truly beat an economic crisis of this magnitude, we must create a demand: A demand for arms. Large and small manufacturers will flock to our offers."
 VEN_diversification2:0 "Diversification Efforts"
 VEN_diversification2_desc:0 "Another way to remedy the situation is to use our influence to help our industrialisation, and thus lower our dependency on the Black Gold. Such an effort would be highly costly, however"
 VEN_diversification3:0 "Army Goods Self Sufficiency"
@@ -91,7 +91,7 @@ VEN_homefrontwon_desc:0 "When our soldier fights, he knows he fights for his peo
 VEN_capitaliseonsucess:0 "Capitalise on Economic Success"
 VEN_capitaliseonsucess_desc:0 "Venezuela's current situation is clearly here due our enlightened leadership, of course."
 VEN_military:0 "Armed Forces Renewal"
-VEN_military_desc:0 "With our neighbours sending military missions abroad, and the sound of sabre rattling being heard  from Managua to Buenos Aires, we cannot simply idly sit by. Our army needs to be brough to shape"
+VEN_military_desc:0 "With our neighbours sending military missions abroad, and the sound of sabre rattling being heard from Managua to Buenos Aires, we cannot simply idly sit by. Our army needs to be brought to shape"
 VEN_navy:0 "Navy of Venezuela"
 VEN_navy_desc:0 "A small but effective navy will be our goal, to protect our shipping from raiding but also to raid enemy shipping if the opportunity arises"
 VEN_yard:0 "Dockyard Effort"
@@ -105,7 +105,7 @@ VEN_propertraining_desc:0 "Our army is currently made of many well meaning volun
 VEN_armaments:0 "Armament Renewal"
 VEN_armaments_desc:0 "Our soldier's training will amount to nothing if we cannot properly outfit them with modern military equipment!"
 VEN_doctrine:0 "Modern Military Doctrine"
-VEN_doctrine-_desc:0 "Our general staff requests aid in an effort to finish the overhaul of our armed forces, which includes a sweeping change on army doctrine. But what path should we take?"
+VEN_doctrine_desc:0 "Our general staff requests aid in an effort to finish the overhaul of our armed forces, which includes a sweeping change on army doctrine. But what path should we take?"
 VEN_doctrineA:0 "Strategic Focus"
 VEN_doctrineA_desc:0 "One path would be to focus on the grand scheme of things, the so called Grand Battleplan, defended by the old guard of our army, and some foreign attacheés as well. A focus on the Strategic view of the battlefield surely is the way to victory"
 VEN_stayingpower:0 "Staying Power"
@@ -139,13 +139,15 @@ VEN_political_liberalization_desc:0 "The thaw must be controlled, but also allow
 VEN_represtative_overtures:0 "Representative Overtures"
 VEN_represtative_overtures_desc:0 "Our elections now have a date to begin, and Venezuelans will finally elect their head of state. The cards are all on the table now!"
 VEN_closertieswithlpl:0 "Closer ties with la Plata"
-VEN_closertieswithlpl_desc:0 "In this dangerous and treacherous continent, perhaps it would be wise to approach the Hegemon of the South, for protection against Syndicalism and Imperialism.
+VEN_closertieswithlpl_desc:0 "In this dangerous and treacherous continent, perhaps it would be wise to approach the Hegemon of the South, for protection against Syndicalism and Imperialism."
 VEN_liberation:0 "Liberation of the Workers"
 VEN_liberation_desc:0 "Arise,oh victims of starvation! Venezuela's future starts now, for the worker's revolution is triumphant!"
 VEN_plannedimportsubstution:0 "Planned Import Substitution"
 VEN_plannedimportsubstution_desc:0 "A matter we must face now is that of what steps can we take to make sure our country can advance; many believe that we should have some sort of capitalist stage, in its true form, before communism, while others simply pragmatically want to diminish our dependence on oil. Regardless, we will use our oil revenue for developing the nation"
 VEN_industrialization1:0 "Intensify Import Substitution"
+VEN_industrialization1_desc:0 "Our initial import substitution policies have been effect: our great nation no longer relies on the capitalists basic goods. We still, however, lack sufficient domestic production of many items important to the health of our nation. Let us move Venezuela towards economic independence!"
 VEN_industrialization2:0 "Finish Import Substitution Project"
+VEN_industrialization2_desc:0 "While we have greatly reduced our dependence on trade with capitalist nation, we still rely on the other socialist nations for many principal goods. At any moment the reactionaries could destroy our socialist comrades abroad and our own society would suffer. We must be fully autonomous."
 VEN_proceedviceroy:0 "Nationalise All Oil Wells"
 VEN_proceedviceroy_desc:0 "We must sieze the means of production from foreign invaders!"
 VEN_noneofyouarefreeofsin:0 "Dig for more Oil!"
@@ -153,7 +155,7 @@ VEN_noneofyouarefreeofsin_desc:0 "We must ensure the worker's revolution can enr
 VEN_powertothepeople:0 "Power to the People!"
 VEN_powertothepeople_desc:0 "Finally, Venezuela is not under the thumb of a shady clique of generals, but of the people!"
 VEN_collectivistprinciples:0 "Collectivist Principles"
-VEN_collectivistprinciples:0 "We must ensure that every man and woman puts the needs of the majority before their own, for this is what the true goal of our revolution is in the end"
+VEN_collectivistprinciples_desc:0 "We must ensure that every man and woman puts the needs of the majority before their own, for this is what the true goal of our revolution is in the end"
 VEN_flameoffreedom:0 "The Flame of Freedom" 
 VEN_flameoffreedom_desc:0 "The peoples of Venezuela and the world are awakening! Our resolve has never been stronger to free this earth from it's slavemasters, and break it's chains, no matter the cost!"
 VEN_researchjoineffort:0 "Joint Research Effort"
@@ -165,7 +167,7 @@ VEN_brazilianmodel_desc:0 "The concepts of 'Brazilian Socialism', or Leuenrothis
 VEN_liberatecolombia:0 "Liberate Colombia"
 VEN_liberatecolombia_desc:0 "Colombia is under the grip of chaos, and their only hope is our intervention!"
 VEN_unitedbrothers:0 "United Brothers"
-VEN_unitedbrothers-desc:0 "At long last, the vision of our founding fathers is here: A united Gran Colombia, with one propose and a multitude of peoples!"
+VEN_unitedbrothers_desc:0 "At long last, the vision of our founding fathers is here: A united Gran Colombia, with one propose and a multitude of peoples!"
 
 ### Events ###
 ven.1.t:0 "Venezuela's place in the world"
